# payload-dumper-rs

./: Cargo.toml  README.md  build.rs
protos/: update_metadata.proto
src/: lib.rs  main.rs  mod.rs  payload.rs
src/partition/: extent.rs  mod.rs  read.rs  write.rs
