[package]
name = "payload-dumper-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = { version = "0.4.4", features = ["tokio", "tokio-io"] }
hex = "0.4.3"
indicatif = "0.17.8"
protobuf = "3.7.1"
rayon = "1.10.0"
sha2 = "0.10.8"
xz = { version = "0.1.0", features = ["tokio"] }

[build-dependencies]
protobuf-codegen = "3.7.1"
protoc-bin-vendored = "3.1.0"
