[package]
name = "payload-dumper-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = { version = "0.5.2", default-features = false, features = [
    "libbz2-rs-sys",
] }
clap = { version = "4.5.20", features = ["derive"] }
hex = "0.4.3"
indicatif = "0.17.11"
prost = "0.13.5"
rayon = "1.10.0"
sha2 = "0.10.8"
xz = { version = "0.1.0", features = ["tokio"] }
zstd = "0.13.3"

[build-dependencies]
prost-build = "0.13.5"

[profile.release]
lto = true
